--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 53d7bc1
+	base = c96821f
 	trimbase = 
 	parent = release/kinetic/simple_arm
-	previous = 
+	previous = 53d7bc1
