--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1d0097a
+	base = 5a39da5
 	trimbase = 
 	parent = arch/kinetic/simple_arm
-	previous = 
+	previous = 1d0097a
